--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 
 <body>
 
+    <!-- container header -->
     <div class="container-header">
         <h1>Meet our team</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia dolorem soluta animi ut nostrum nihil deleniti corrupti, libero in quo. Quas sequi culpa recusandae! Dolorum incidunt officia tempora consequuntur cumque.</p>
     </div>
+
+
+    <!-- container card -->
     <div class="container">
         <div class="card">
             <div class="card-img">
@@ -29,57 +33,10 @@
             <div class="card-text">
                 <h3>pippo</h3>
                 <span>paperino</span>
-                <span>prova</span>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card-img">
-                <img src="img/female1.png" alt="">
-            </div>
-            <div class="card-text">
-                <h3>pippo</h3>
-                <span>paperino</span>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card-img">
-                <img src="img/female1.png" alt="">
-            </div>
-            <div class="card-text">
-                <h3>pippo</h3>
-                <span>paperino</span>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card-img">
-                <img src="img/female1.png" alt="">
-            </div>
-            <div class="card-text">
-                <h3>pippo</h3>
-                <span>paperino</span>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card-img">
-                <img src="img/female1.png" alt="">
-            </div>
-            <div class="card-text">
-                <h3>pippo</h3>
-                <span>paperino</span>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card-img">
-                <img src="img/female1.png" alt="">
-            </div>
-            <div class="card-text">
-                <h3>pippo</h3>
-                <span>paperino</span>
+                <a href="#">
+                    <span>prova</span>
+                </a>
+                
             </div>
         </div>
     </div>
