--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- container card -->
     <div class="container">
-        <div class="card">
+        <!-- <div class="card">
             <div class="card-img">
                 <img src="img/female1.png" alt="">
             </div>
@@ -36,9 +36,8 @@
                 <a href="#">
                     <span>prova</span>
                 </a>
-                
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 
